Supportive materials and files.

--- a/documents/sections/appendix_table.tex
+++ b/documents/sections/appendix_table.tex
@@ -1,5 +1,10 @@
 \clearpage
 \subsection{Tables}
+\textit{\textbf{Note:}} In the following tables, \textbf{dynamic regression models} with dummy variables
+or not have alias as \textbf{"sarima\_dummy" or "sarima\_no\_dummy"}, 
+\textbf{traditional linear models} with dummy variables
+or not have alias as \textbf{"linear\_dummy" or "linear\_no\_dummy"},
+due to the naming method in writing R code.
 
 \begin{table}[!h]
     \centering
